--- a/cpm.yml
+++ b/cpm.yml
@@ -1,11 +1,14 @@
 prereqs:
   runtime:
     requires:
-      CPAN::Meta::Requirements:
+      CPAN::DistnameInfo:
       CPAN::Meta:
+      CPAN::Meta::Requirements:
       File::pushd:
       HTTP::Tiny:
       IO::Socket::SSL:
       IPC::Run3:
       JSON::PP:
+      YAML::PP:
+      perl: { version: '5.32.1' }
       version:
